--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,6 +13,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    
     - uses: actions/checkout@v4
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+      run: |
+        echo "${{ secrets.DOCKERPW }}" | docker login -u "choyce" --password-stdin
+        docker image build -t choyce/dm-api:latest .
+        docker push choyce/dm-api:latest
