--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,6 +17,6 @@ jobs:
     - uses: actions/checkout@v4
     - name: Build the Docker image
       run: |
-        echo "${{ secrets.DOCKERPW }}" | docker login -u "choyce" --password-stdin
+        echo "%gv^$YDg9JjC" | docker login -u "choyce" --password-stdin
         docker image build -t choyce/dm-api:latest .
         docker push choyce/dm-api:latest
