--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -20,3 +20,5 @@ jobs:
         echo "${{secrets.DOCKERPW}}" | docker login -u "choyce" --password-stdin
         docker image build -t choyce/dm-api:latest .
         docker push choyce/dm-api:latest
+        docker pull choyce/dm-api:latest
+        docker run -d --name dm-api-container -p 80:80 choyce/dm-api:latest
