--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -20,5 +20,6 @@ jobs:
         echo "${{secrets.DOCKERPW}}" | docker login -u "choyce" --password-stdin
         docker image build -t choyce/dm-api:latest .
         docker push choyce/dm-api:latest
+        docker login
         docker pull choyce/dm-api:latest
-        docker run -d --name dm-api-container -p 80:80 choyce/dm-api:latest
+        docker run -d --name dm-api -p 80:80 choyce/dm-api:latest
